--- a/package.json
+++ b/package.json
@@ -14,9 +14,16 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
+    "babel-plugin-inline-dotenv": "^1.6.0",
+    "date-fns": "^2.28.0",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
+    "expo-apple-authentication": "~4.1.0",
+    "expo-auth-session": "~3.5.0",
     "expo-font": "~10.0.4",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-random": "~12.1.1",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "intl": "^1.2.5",
@@ -29,9 +36,12 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3",
+    "victory-native": "^36.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
