created the publishing feature in stores

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,9 @@ expo.webp.enabled=true
 # Enable animated webp support (~3.4 MB increase)
 # Disabled by default because iOS doesn't support animated webp
 expo.webp.animated=false
+
+# Enable variables
+MYAPP_UPLOAD_STORE_FILE=production-android.keystore
+MYAPP_UPLOAD_KEY_ALIAS=production-android
+MYAPP_UPLOAD_STORE_PASSWORD=roherool
+MYAPP_UPLOAD_KEY_PASSWORD=roherool
